# researchq

./: .gitignore  STORAGE_IMPLEMENTATION.md  demo_cache_sweep.py  demo_end_to_end.py  demo_sprayer_with_storage.py  demo_storage.py  publish.sh  pyproject.toml  pytest.ini  research_table.csv  research_table.json  test_basic_functionality.py
autora/: llm.py  sprayer.py  storage.py
data/: ministries_of_energy_done_with_all_countries.xlsx  ministries_of_foreign_affairs_final_with_all_countries.xlsx  ministries_of_transportation_done_with_all_countries.xlsx
docs/: sqlite_storage.md  storage_providers.md  structured_responses.md
examples/: asdf.ipynb  playground.py  pydantic_models.py  sqlite_example.py  structured_examples.py
researchq/: LICENSE  README.md  __init__.py  ask.py  classes.py  llm.py  mock_query.py  question.py  session_storage.py  sonar_query.py  sprayer.py  sqlite_storage.py
robora/: __init__.py  classes.py  mock_query.py  workflow.py
tests/: llm_playground.py  test_cache_sweep.py  test_llm.py  test_mock_components.py  test_sonar.py  test_sprayer_storage_integration.py  test_sqlite_storage.py  test_storage.py  test_structured_spray.py
usage/: cyber_relevance_assessment.ipynb  cyber_relevance_assessment.py  cyber_relevance_dev.ipynb  cyber_relevance_results.csv  cyber_relevance_results.json  energy_ministry_cyber_world_map.ipynb  energy_ministry_cyber_world_map_executed.ipynb
usage/output/: energy_ministry_cyber_full_assessment.csv  energy_ministry_cyber_full_assessment.jsonl  foreign_affairs_cyber_relevance_full_assessment.csv  (+2 more)
