[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchq"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "pandas>=2.3.2",
    "python-dotenv",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]

[tool.setuptools]
packages = ["researchq"]
